2002-08-07  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/.cvsignore: added the marshal generated files
	* src/Makefile.am: upd
	* src/debug.h: fix declaration of TE and TL
	* src/gtk-xine.c:
	* src/gtk-xine.h: plenty of small fixes, and cleanups
	* src/totem.c: create the video widget after the window has been
	shown (should make it feel faster on slow machines), remove
	long_action()
	* src/totem.glade: make the video widget be at a 4:3 ratio by default

2002-08-06  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: added the marshal list
	* src/gtk-xine.c: (gtk_xine_class_init), (gtk_xine_instance_init),
	(gtk_xine_realize), (gtk_xine_idle_signal), (xine_event),
	(codec_reporting), (xine_error):
	* src/gtk-xine.h:
	* src/gtkxine-marshal.list: marshals
	* src/totem.c: (play_pause_set_label), (action_set_mrl),
	(action_previous), (action_next), (playlist_changed_cb),
	(current_removed_cb), (on_eos_event), (on_error_event),
	(video_widget_create), (main): mucho work wrt threading, deadlocks,
	etc. All the deadlocks should now be gone, the player itself probably
	behaves a bit bizzarely right now, I'll fix it soon.
	Thanks to Steve Baker and Owen Taylor for their great help.

2002-08-05  Bastien Nocera  <hadess@hadess.net>

	* README:
	* src/gtk-xine.c: (xine_error):
	* src/totem.c: (action_stop), (action_previous), (action_next),
	(on_about1_activate), (playlist_changed_cb), (main):
	added Guenter to the authors, fix typos (thanks Christophe Fergeau)
	add some commented out code that's buggy, damn threads

2002-08-04  Christophe Fergeau  <teuf@users.sourceforge.net>

	* configure.in: added fr.po 

2002-08-04  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/debug.h: added threads debugging
	* src/gtk-xine.c: (gtk_xine_class_init): moved threads init here
	* src/totem.applications:
	* src/totem.keys: added wav and fli handling
	* src/totem.c: (on_eos_event), (main): upd
	* src/totem.glade: add a Play DVD item, just to see
