@@ -1,5 +1,12 @@
 2002-08-07  Bastien Nocera  <hadess@hadess.net>
 
+	* src/gtk-xine.c: (dest_size_cb), (frame_output_cb),
+	(load_video_out_driver), (xine_thread), (configure_cb),
+	(gtk_xine_realize), (gtk_xine_size_allocate):
+	g_strfreev is nice, and fix some brain damage in configure_cb
+
+2002-08-07  Bastien Nocera  <hadess@hadess.net>
+
 	* README: upd
 	* src/.cvsignore: added the marshal generated files
 	* src/Makefile.am: upd
